# cs599-project

./: .coveragerc  .env.example  .gitattributes  Makefile  README.md  benchmark.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
app/: config.py  main.py
app/agents/: academic_agent.py  asset_manager_agent.py  clarification_agent.py  critic_agent.py  ecommerce_agent.py  ppt_agent.py  prompt_agent.py  requirement_agent.py  revision_agent.py  router_agent.py  visual_spec_agent.py
app/graph/: visionflow_graph.py
app/llm/: llm_factory.py  mock_llm.py
app/models/: database.py  schemas.py
app/services/: generation_service.py
app/tools/: aspect_ratio.py  benchmark.py  benchmark_legacy.py  diagram_generator.py  document_extractor.py  evaluator.py  image_factory.py  image_generator.py  mock_image_generator.py  trace_logger.py
app/ui/: api_client.py  clarification_compat.py  components.py  streamlit_app.py
benchmarks/: examples.jsonl
benchmarks/results/: latest.json
docs/: fix_report.md  test_report.md
scripts/: export_demo_cases.py  generate_readme_examples.py  render_showcase_academic_png.py  run_demo.py  validate_repo_format.py
tests/: conftest.py  test_api_errors.py  test_api_required.py  test_aspect_ratio.py  test_benchmark.py  test_clarification_agent.py  test_config_consistency.py  test_document_extractor.py  test_evaluator.py  test_evaluator_rubric.py  test_generation_flow.py  test_mock_provider.py  test_pagination.py  test_router_agent.py  test_router_clarification.py  test_trace_metadata.py  test_trace_pipeline.py  test_visual_spec.py
(+22 files in other folders)
