[project]
name = "visionflow"
version = "0.2.0"
description = "Multi-agent visual content generation system for CS599"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
    | storage
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "storage"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/ui/streamlit_app.py" = ["E402"]
"scripts/*.py" = ["E402"]
